--- a/TPSP/src/Makefile
+++ b/TPSP/src/Makefile
@@ -9,7 +9,7 @@ KERNEL_SRC=kernel.asm
 KERNEL_OBJ=kernel.o
 KERNEL_BIN=kernel.bin
 
-OBJ=$(KERNEL_OBJ) gdt.o screen.o idt.o isr.o pic.o keyboard_input.o
+OBJ=$(KERNEL_OBJ) gdt.o screen.o 
 
 # Dependencias, generado por el flag -MMD de gcc, util para recompilar cuando actualizamos headers.
 DEP=$(OBJ:%.o=%.d)
@@ -39,9 +39,9 @@ QEMU_ARGS = -S -drive format=raw,if=floppy,file=$(DISK_IMG) -daemonize -pidfile 
 
 QUIET = @
 
-.PHONY=clean all image
+.PHONY=clean all image 
 
-all:  clean image
+all:  clean image 
 
 format:
 	clang-format -i *.h *.c
@@ -58,7 +58,7 @@ seed:
 
 -include $(DEP)
 
-kernel.bin: $(OBJ)
+kernel.bin: $(OBJ) 
 	@echo 'Linkeando kernel...'
 	$(LD) $(LDFLAGS) -o $@.elf $(OBJ)
 	@echo 'Extrayendo tabla de simbolos...'
@@ -78,7 +78,7 @@ image: kernel.bin $(DISK_IMG)
 	$(MCOPY) -o -i $(DISK_IMG) $(KERNEL_BIN) ::/
 	@echo ''
 
-$(DISK_IMG):
+$(DISK_IMG): 
 	@echo 'aca esta'
 	bzip2 -dk $(DISK_IMG_BZ)
 	@echo ''
